# p2pp

./: .cursorrules  .gitignore  404.html  AppIMageBuilder.yml  DEVELOPMENT.md  DEVELOPMENT_SETUP.md  E2E_READY_SUMMARY.md  MANIFEST.in  Makefile  P2PP.py  PRODUCTION_READY.md  README.md  SOLUTION_SUMMARY.md  SendError.ui  WORKING_SUMMARY.md  blobster.html  building_p2pp.html  code_overview.html  config.py  contributing.html  entitlements.plist  faq.html  first_print_calibration.html  getting_started.html  image_rc.py  index.html  makeDMG.sh  makeDMGlocal.sh  makeZIP.bat  p2pp.command  p2pp.desktop  p2pp.ui  p2pp_config.html  p2pp_config.ui  p2pp_param_overview.html  p2ppconf.ui  p3browser.ui  process_flow.html  prusa_config.html  purge_length_calc.html  (+11 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.github/workflows/: auto-release.yml  build-and-test.yml  build-packages.yml  build.yml  docs.yml  release.yml
_p2pp/: mkdocs-requirements.txt
_p2pp/css/: extra.css
config/: __init__.py  config_gui.py  prusaconfig.py  qdroptarget.py  qmulticombo.py
debian/: changelog  control  rules
debian/source/: format
docs/: ARCHITECTURE_BUILDS.md  blobster.md  building_p2pp.md  code_overview.md  contributing.md  faq.md  first_print_calibration.md  getting_started.md  index.md  p2pp_config.md  p2pp_param_overview.md  process_flow.md  prusa_config.md  purge_length_calc.md  ref_configs.md  troubleshooting.md
docs/_p2pp/: mkdocs-requirements.txt  mkdocs.yml
old/: P2PP Confiruration Tool.docx
p2pp/: bedprojection.py  checkversion.py  colornames.py  formatnumbers.py  gcode.py  genpreview.py  gui.py  manualswap.py  mcf.py  omega.py  p2_m4c.py  p2ppparams.py  p3_upload.py  pings.py  psconfig.py  purgetower.py  sidewipe.py  upload.py  variables.py
scripts/: check_architecture.py  dev.py  post_install.sh  post_uninstall.sh  test_architecture_builds.py
tests/: conftest.py
tests/e2e/: test_architecture_tools.py  test_build_workflow.py  test_platform_startup.py
tests/integration/: test_build_system.py
tests/unit/: test_version.py
tower/: __init__.py  tower.py
